--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
-
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
@@ -42,6 +41,21 @@ android {
             path "src/main/jni/Android.mk"
         }
     }
+
+    viewBinding {
+        enabled = true
+    }
+
+
+    kapt {
+        generateStubs = true
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    buildToolsVersion '28.0.3'
+
 }
 /*configurations.all {
     resolutionStrategy.force 'com.android.support:support-annotations:26.1.0'
@@ -86,6 +100,7 @@ dependencies {
     // ConstraintLayout
     implementation "org.jetbrains.anko:anko-constraint-layout:$anko_version"
 
+    kapt "com.android.databinding:compiler:3.6.3"
 
     //bilibili ijkplayer
     implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
