--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,20 +10,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:icon">
 
-        <activity android:name=".activity.charts.BaseChartActivity"></activity>
         <activity android:name=".activity.PopwindowActivity" />
         <activity android:name=".activity.CustomMapActivity" />
         <activity android:name=".activity.TripleViewPagerActivity" />
         <activity android:name=".activity.CardViewPagerActivity" />
         <activity android:name=".activity.ChromeTabActivity" />
-        <activity
-            android:name=".ui.login.LoginActivitySystem"
-            android:label="@string/title_activity_login_system" />
         <activity android:name=".activity.BannerActivity" />
         <activity android:name=".activity.TabScrollViewActivity" />
         <activity android:name=".activity.LoginActivity" />
@@ -66,18 +62,19 @@
         <activity android:name=".activity.CommodityDetailActivity" /> <!-- 必须加 -->
         <activity android:name=".activity.UpdateAppActivity" />
         <activity android:name=".activity.JsonParseActivity" />
-        <activity android:name=".activity.charts.BarChartActivityMultiDataset" />
         <activity android:name=".activity.PieChartActivity" />
-        <activity android:name=".activity.charts.BarChartActivity" />
-        <activity android:name=".activity.charts.CombinedChartActivity" />
-        <activity android:name=".activity.charts.PiePolylineChartActivity" />
-        <activity android:name=".activity.charts.HorizontalBarChartActivity" />
-        <activity android:name=".activity.charts.StackedBarActivity" />
-        <activity android:name=".activity.charts.CandleStickChartActivity" />
         <activity android:name=".activity.SeekBarActivity" />
         <activity android:name=".activity.AddressChooseActivity" />
         <activity android:name=".activity.ImagePickerActivity" />
         <activity android:name=".utils.imagepicker.MultiImageSelectorActivity" />
+        <activity android:name=".activity.kotlinchart.StackedBarActivity" />
+        <activity android:name=".activity.kotlinchart.BarChartActivityMultiDataset" />
+        <activity android:name=".activity.kotlinchart.BaseChartActivity" />
+        <activity android:name=".activity.kotlinchart.CandleStickChartActivity" />
+        <activity android:name=".activity.kotlinchart.HorizontalBarChartActivity" />
+        <activity android:name=".activity.kotlinchart.MultiLineChartActivity" />
+        <activity android:name=".activity.kotlinchart.PiePolylineChartActivity" />
+        <activity android:name=".activity.kotlinchart.CombinedChartActivity" />
 
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
@@ -105,8 +102,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <!-- 这个权限用于进行网络定位 -->
